maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:26: error: not found: value YBaggle
  y = YBaggle;
      ^JediEscaper:35: error: not found: value auMurOuest
    if ( !auMurOuest(x,y) ){
          ^JediEscaper:39: error: not found: value auMurSud
    if ( !auMurSud(x,y) ){
          ^JediEscaper:43: error: not found: value auMurEst
    if ( !auMurEst(x,y) ){
          ^